// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown[Base] should render correctly  1`] = `
<div
  class="cllnj82 soui-dropdown-wrapper"
  data-position="bottom-left"
>
  <button
    class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
    type="button"
  >
    <span
      class="cay8v7c soui-dropdown-content"
    >
      Click me
    </span>
    <span
      class="csba7r6 soui-dropdown-caret"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about absolute 1`] = `
<div
  style="background: rgb(238, 238, 238); padding: 20px; border-radius: 4px; overflow: hidden;"
>
  <div
    class="cllnj82 soui-dropdown-wrapper"
    data-position="bottom"
  >
    <button
      class="cp6fv83 soui-dropdown-button c-pqywe8 soui-button-primary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
      type="button"
    >
      <span
        class="cay8v7c soui-dropdown-content"
      >
        Absolute
      </span>
      <span
        class="csba7r6 soui-dropdown-caret"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="cllnj82 soui-dropdown-wrapper"
    data-position="bottom-left"
    style="margin-inline-start: 24px;"
  >
    <button
      class="cp6fv83 soui-dropdown-button c-pqywe8 soui-button-primary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
      type="button"
    >
      <span
        class="cay8v7c soui-dropdown-content"
      >
        Default
      </span>
      <span
        class="csba7r6 soui-dropdown-caret"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Dropdown[Base] should render correctly about button 1`] = `
<div
  style="display: flex; gap: 24px;"
>
  <div
    style="display: flex; flex-direction: column; align-items: flex-start; gap: 24px;"
  >
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-pqywe8 soui-button-primary cmdnit0 soui-button-button"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button cn0mrxh soui-button-danger cmdnit0 soui-button-button"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-1y3ld2 soui-button-warning cmdnit0 soui-button-button"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button cjlvr0h soui-button-success cmdnit0 soui-button-button"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Default
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; flex-direction: column; align-items: flex-start; gap: 24px;"
  >
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-pqywe8 soui-button-primary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button cn0mrxh soui-button-danger cmdnit0 soui-button-button cw6wzwg soui-button-outline"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-1y3ld2 soui-button-warning cmdnit0 soui-button-button cw6wzwg soui-button-outline"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button cjlvr0h soui-button-success cmdnit0 soui-button-button cw6wzwg soui-button-outline"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Outline
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; flex-direction: column; align-items: flex-start; gap: 24px;"
  >
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-pqywe8 soui-button-primary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button cn0mrxh soui-button-danger cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-1y3ld2 soui-button-warning cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button cjlvr0h soui-button-success cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Text
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dropdown[Base] should render correctly about children 1`] = `
<div
  class="cllnj82 soui-dropdown-wrapper"
  data-position="bottom-left"
>
  <button
    class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
    type="button"
  >
    <span
      class="cay8v7c soui-dropdown-content"
    >
      Click me
    </span>
    <span
      class="csba7r6 soui-dropdown-caret"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about columns 1`] = `
<div
  class="cllnj82 soui-dropdown-wrapper"
  data-position="bottom-left"
>
  <button
    class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
    type="button"
  >
    <span
      class="cay8v7c soui-dropdown-content"
    >
      Tiling Menu
    </span>
    <span
      class="csba7r6 soui-dropdown-caret"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about divider 1`] = `
<div
  class="cllnj82 soui-dropdown-wrapper"
  data-position="bottom-left"
>
  <button
    class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
    type="button"
  >
    <span
      class="cay8v7c soui-dropdown-content"
    >
      Dividing Line
    </span>
    <span
      class="csba7r6 soui-dropdown-caret"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about group 1`] = `
<div
  class="cllnj82 soui-dropdown-wrapper"
  data-position="bottom-left"
>
  <button
    class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
    type="button"
  >
    <span
      class="cay8v7c soui-dropdown-content"
    >
      Group Menu
    </span>
    <span
      class="csba7r6 soui-dropdown-caret"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about hover 1`] = `
<div
  class="cllnj82 soui-dropdown-wrapper"
  data-position="bottom-left"
>
  <button
    class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
    type="button"
  >
    <span
      class="cay8v7c soui-dropdown-content"
    >
      Click me
    </span>
    <span
      class="csba7r6 soui-dropdown-caret"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about icon 1`] = `
<div
  class="cllnj82 soui-dropdown-wrapper"
  data-position="bottom-left"
>
  <button
    class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
    type="button"
  >
    <span
      class="cay8v7c soui-dropdown-content"
    >
      Icon Menu
    </span>
    <span
      class="csba7r6 soui-dropdown-caret"
    >
      <svg
        aria-hidden="true"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`Dropdown[Base] should render correctly about position 1`] = `
<div
  style="display: inline-flex; flex-direction: column; gap: 12px;"
>
  <div
    style="display: flex; justify-content: center; gap: 12px; padding: 0px 120px;"
  >
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Bottom left
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Bottom
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="bottom-right"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Bottom right
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="right-top"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Right Top
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="left-top"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Left Top
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="right"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Right
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Left
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="right-bottom"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Right Bottom
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="left-bottom"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Left Bottom
        </span>
      </button>
    </div>
  </div>
  <div
    style="display: flex; justify-content: center; gap: 12px;"
  >
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="top-left"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Top Left
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="top"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Top
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="cllnj82 soui-dropdown-wrapper"
      data-position="top-right"
    >
      <button
        class="cp6fv83 soui-dropdown-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button c-6ecjv5 soui-button-text"
        type="button"
      >
        <span
          class="cay8v7c soui-dropdown-content"
        >
          Top right
        </span>
        <span
          class="csba7r6 soui-dropdown-caret"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Dropdown[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cllnj82 soui-dropdown-wrapper"
    data-position="bottom-left"
    style="margin-inline-end: 24px;"
  >
    <button
      class="cp6fv83 soui-dropdown-button c-pqywe8 soui-button-primary cmdnit0 soui-button-button cw6wzwg soui-button-outline ceq3w91 soui-button-small"
      type="button"
    >
      <span
        class="cay8v7c soui-dropdown-content"
      >
        Dropdown
      </span>
      <span
        class="csba7r6 soui-dropdown-caret"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="cllnj82 soui-dropdown-wrapper"
    data-position="bottom-left"
    style="margin-inline-end: 24px;"
  >
    <button
      class="cp6fv83 soui-dropdown-button c-pqywe8 soui-button-primary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
      type="button"
    >
      <span
        class="cay8v7c soui-dropdown-content"
      >
        Dropdown
      </span>
      <span
        class="csba7r6 soui-dropdown-caret"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="cllnj82 soui-dropdown-wrapper"
    data-position="bottom-left"
    style="margin-inline-end: 24px;"
  >
    <button
      class="cp6fv83 soui-dropdown-button c-pqywe8 soui-button-primary cmdnit0 soui-button-button cw6wzwg soui-button-outline cem20qh soui-button-large"
      type="button"
    >
      <span
        class="cay8v7c soui-dropdown-content"
      >
        Dropdown
      </span>
      <span
        class="csba7r6 soui-dropdown-caret"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`Dropdown[Base] should render correctly about split 1`] = `
<div
  class="cejlunx soui-button-group"
  style="display: inline-block; margin-inline-end: 24px;"
>
  <button
    class="c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
    type="button"
  >
    <span>
      Option
    </span>
  </button>
  <button
    class="c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
    type="button"
  >
    <span>
      Option
    </span>
  </button>
  <div
    class="cllnj82 soui-dropdown-wrapper"
    data-position="bottom-right"
  >
    <button
      class="cp6fv83 soui-dropdown-button c-wc2ql1 soui-dropdown-split-button c-98dy8e soui-button-secondary cmdnit0 soui-button-button cw6wzwg soui-button-outline"
      type="button"
    >
      <span
        class="cay8v7c soui-dropdown-content"
      />
      <span
        class="csba7r6 soui-dropdown-caret"
      >
        <svg
          aria-hidden="true"
          fill="currentColor"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.2929 15.7071C11.6534 16.0676 12.2206 16.0953 12.6129 15.7903L12.7071 15.7071L18.7071 9.70711C19.0976 9.31658 19.0976 8.68342 18.7071 8.29289C18.3466 7.93241 17.7794 7.90468 17.3871 8.2097L17.2929 8.29289L12.7072 12.8779C12.3165 13.2683 11.6835 13.2683 11.2928 12.8779L6.70711 8.29289C6.34662 7.93241 5.77939 7.90468 5.3871 8.2097L5.29289 8.29289C4.93241 8.65338 4.90468 9.22061 5.2097 9.6129L5.29289 9.70711L11.2929 15.7071Z"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
